<resources>
    <string name="app_name">Pros</string>
    <string name="loadingScreen_title">Pros.</string>
    <string name="WinAndLossScreen_enemyCpuBlockWin_title">Try harder\nNEXT TIME.</string>
    <string name="WinAndLossScreen_enemyCpuBlockWin_secondText">I believe in you ;)</string>
    <string name="WinAndLossScreen_myBlockWin_title">Its a WIN\nFor You.</string>
    <string name="WinAndLossScreen_myBlockWin_secondText">Congratulations ;)</string>
    <string name="WinAndLossScreen_draw_title">Draw.</string>
    <string name="WinAndLossScreen_draw_secondText">Make sure to close the deal\nNext time</string>
    <string name="WinAndLossScreen_toMainScreenButtonText">To Main Screen</string>
    <string name="usernamePickDialog_text">Pick a\nUsername</string>
    <string name="gameScreen_smileyText">:)</string>
    <string name="gameScreen_overtimeText">overtime</string>
    <string name="loginScreen_title">Log In,\nOr Create a\nUser</string>
    <string name="loginScreen_email">Email</string>
    <string name="loginScreen_password">Password</string>
    <string name="mainScreen_title">Play.</string>
    <string name="mainScreen_usernameGreet">Hey,</string>
    <string name="settingsScreen_title">Settings.</string>
    <string name="settingsScreen_sound">sound:</string>
    <string name="skinsScreen_title">Skins.</string>
    <string name="skinsScreen_secondTitle">Choose yours ;)</string>
    <string name="loginScreen_emptyErrorMessage">Please fill in both fields</string>
    <string name="loginScreen_notExistErrorMessage">This user does not exist, try to create a user</string>
    <string name="usernamePickDialog_emptyError">Please choose a username and a profile picture</string>
    <string name="loginScreen_takenOrInvalidErrorMessage">The email or the password are taken or invalid. Please try again</string>
    <string name="friendlyGameWaitingRoomScreen_title">Invite Your Enemy ;)</string>
    <string name="friendlyGameWaitingRoomScreen_belowTitle">Lobby code:</string>
    <string name="friendlyGameWaitingRoomScreen_vs">VS</string>
    <string name="friendlyGameWaitingRoomScreen_questionMarks">-???-</string>
    <string name="joinGameDialog_title">Type Your\nGame Code</string>
    <string name="aboutScreen_title">About.</string>
    <string name="aboutScreen_text">Hey, this is my game!\nThe game is a simple and classic Pong game. Your goal is to score the ball into the opponents goal, which is the opposite border of the screen.\n\nEnjoy! ;)</string>
    <string name="aboutScreen_buttonText">To Main Screen</string>
    <string name="duelModesDialog_title">Pick.</string>
    <string name="duelModesDialog_onlineModes">Play online:</string>
    <string name="duelModesDialog_splitScreen">Play in split screen:</string>
</resources>
