<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:layoutDirection="ltr">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.01" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.99" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.99" />

    <TextView
        android:id="@+id/textView_aboutScreen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/coming_soon"
        android:text="@string/aboutScreen_title"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalUp">

    </TextView>

    <TextView
        android:id="@+id/textView_aboutScreen_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/coming_soon"
        android:gravity="center"
        android:text="@string/aboutScreen_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toBottomOf="@+id/textView_aboutScreen_title" />

    <Button
        android:id="@+id/button_aboutScreen_toMainScreenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="#000000"
        android:fontFamily="@font/coming_soon"
        android:shadowColor="#F3F3F3"
        android:text="@string/aboutScreen_buttonText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalDown"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft" />

</androidx.constraintlayout.widget.ConstraintLayout>